# gerbera

./: .clang-format  .clang-tidy  .cmake-format.py  .dockerignore  .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  CONTRIBUTING.md  COPYING.md  ChangeLog  ChangeLog.md  Dockerfile  Dockerfile.debug  Dockerfile.opensuse  NEWS  README  README.Docker.md  README.UTF_8  README.duktape  README.md  README.old  README_FreeBSD.md  ReleaseNotes.md  acinclude.m4  conanfile.py  configure.ac  mediatomb.spec.in  meson.build  meson_options.txt
mediaserver/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  mediatomb.spec
mediaserver/config/: Makefile.am  config-dist.xml  create_db.sql  magic.mime  mysql.sql  sqlite3.sql
mediaserver/doc/: Makefile.am  mysql.txt  scripting-dev.txt  scripting-intro.txt  scripting.txt
mediaserver/scripts/: Makefile.am  mediatomb-service  tomb-install-dist.py
mediaserver/src/: Makefile.am  action_request.cc  action_request.h  cds_objects.cc  cds_objects.h  cds_resource.cc  cds_resource.h  cds_resource_manager.cc  cds_resource_manager.h  common.h  config_manager.cc  config_manager.h  content_manager.cc  content_manager.h  destroyer.cc  destroyer.h  dictionary.cc  dictionary.h  exceptions.cc  exceptions.h  file_io_handler.cc  file_io_handler.h  file_request_handler.cc  file_request_handler.h  filesystem.cc  filesystem.h  hash.h  io_handler.h  jpeg_resolution.cc  logger.cc  logger.h  main.cc  mem_io_handler.cc  mem_io_handler.h  metadata_handler.cc  metadata_handler.h  metadata_reader.cc  metadata_reader.h  process.cc  process.h  (+34 more)
mediaserver/web/: Makefile.am  didl.xsl  edit.xsl  head.html  help.html  index.html  miniserver.xml  noaccess.html
mediatomb/: AUTHORS  COPYING  ChangeLog  FAQ  INSTALL  Makefile.am  README  README.UTF_8  TODO  acinclude.m4  bootstrap.sh  configure.ac  devconf  mediatomb.spec  mediatomb.spec.in
mediatomb/artwork/: stone.blend
mediatomb/config/: Makefile.am  config-dist.xml  config.xsd  generate-c-cource-from-dump.sh  mappings.xml  mediatomb-conf-fedora  mediatomb-conf-optware  mediatomb.conf  mysql.sql  mysql.sql.Z  mysql.sql.Z.c  mysql.sql.tmpl.h  pgsql.sql.tmpl.f  pgsql.sql.tmpl.h  sqlite3.sql  sqlite3.sql.Z  sqlite3.sql.Z.c  sqlite3.sql.tmpl.f  sqlite3.sql.tmpl.h
mediatomb/doc/: Makefile.am  doxygen.conf  manpage.xml  mediatomb.1  readme.lyx  scripting-dev.txt  scripting.lyx  scripting.txt  scripting_utf8.txt  transcoding.lyx  transcoding.txt  transcoding_utf8.txt  ui.lyx  ui.txt  ui_utf8.txt
mediatomb/scripts/: Makefile.am  demo_toggle.py  gen_readme.sh  gen_readme_html.sh  mediatomb-prerm-optware  mediatomb-service  mediatomb-service-fedora  mediatomb-service-optware.in  mediatomb_0.8+0.9.0-pre.bb  mediatomb_0.9.0-pre.bb  mediatomb_0.9.0.bb  mediatomb_svn.bb  readme_utf-8_acsii_convert.pl  readme_xhtml_div_extract.pl  search.sh  traceinfo  update-comment-header.pl  update-comment-header.sh  valgrind.sh  whitespace_cleanup.pl  whitespace_cleanup.sh
mediatomb/src/: Makefile.am  action_request.cc  action_request.h  atrailers_content_handler.cc  atrailers_content_handler.h  atrailers_service.cc  atrailers_service.h  autoscan.cc  autoscan.h  autoscan_directory.cc  autoscan_directory.h  autoscan_inotify.cc  autoscan_inotify.h  buffered_io_handler.cc  buffered_io_handler.h  cached_url.cc  cached_url.h  cds_objects.cc  cds_objects.h  cds_resource.cc  cds_resource.h  cds_resource_manager.cc  cds_resource_manager.h  common.h  config_manager.cc  config_manager.h  config_options.h  content_manager.cc  content_manager.h  curl_io_handler.cc  curl_io_handler.h  destroyer.cc  destroyer.h  dictionary.cc  dictionary.h  dvd_io_handler.cc  dvd_io_handler.h  dvd_read.cc  dvd_read.h  dvdnav_read.cc  (+132 more)
mediatomb/tombupnp/: ChangeLog  README  README_PUPNP  THANKS  configure.ac
mediatomb/web/: Makefile.am  border.html  browse.xsl  cds.xml  cm.xml  defaults.xsl  disabled.html  error.xsl  head.html  index.html  left.html  login.html  main.css  new.xsl  right.html  rollover.js  std_treelook.css  top.html  topleft.html  topright.html  ui_config.xml
mediatomb/webnew/: disabled.html  index.html
test/: CMakeLists.txt  README.md  dictionary_test.cc  meson.build  runtime_test.cc  search_handler_test.cc
test/config/: CMakeLists.txt  CTestManip.cmake  main.cc  meson.build  test_configgenerator.cc  test_configmanager.cc
test/content/: CMakeLists.txt  content_manager_test.cc  main.cc  meson.build  test_autoscan_list.cc  test_autoscan_timed.cc  test_resolution.cc
test/core/: CMakeLists.txt  CTestManip.cmake  main.cc  meson.build  test_ffmpeg_cache_paths.cc  test_request_handler.cc  test_searchhandler.cc  test_server.cc  test_upnp_map.cc  test_upnp_xml.cc  test_url_utils.cc
test/database/: CMakeLists.txt  CTestManip.cmake  import.cc  main.cc  meson.build  mysql_config_fake.h  postgres_config_fake.h  sqlite_config_fake.h  test_database.cc  test_sql_generators.cc
test/mock/: config_mock.h  database_mock.h  storage_mock.h
test/scripting/: CMakeLists.txt  CTestManip.cmake  main.cc  meson.build  test_common_script.cc  test_cue_cuesheet.cc  test_external_asx_playlist.cc  test_external_m3u_playlist.cc  test_external_pls_playlist.cc  test_import_community_scripts.cc  test_import_details_script.cc  test_import_initials_script.cc  test_import_script.cc  test_import_struct_script.cc  test_internal_m3u8_playlist.cc  test_internal_m3u_playlist.cc  test_internal_pls_playlist.cc  test_nfo_metafile.cc  test_runtime.cc  test_runtime.h
test/test_config/: CMakeLists.txt  test_configgenerator.cc  test_configmanager.cc
test/test_core/: CMakeLists.txt  test_searchhandler.cc  test_upnp_xml.cc
test/test_dictionary/: CMakeLists.txt  main.cc  test_dictionary.cc  (+1 more)
web/: .gitignore  Makefile.am  README.md  cds.xml  disabled.html  doc  gerbera-config-expert.json  gerbera-config-minimal.json  gerbera-config-standard.json  gerbera-config.json  gerbera.html  index.html  left.html  main.css  mr_reg.xml  old.html  right.html  std_treelook.css  top.html  topleft.html  topright.html
(+1754 files in other folders)
